[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/sprites.png" type="Texture" id=1]
[ext_resource path="res://scenes/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/enemy_1_b.tres" type="Texture" id=3]
[ext_resource path="res://assets/enemy_1_r.tres" type="Texture" id=4]
[ext_resource path="res://assets/explosion_2.tres" type="Texture" id=5]
[ext_resource path="res://assets/explosion_3.tres" type="Texture" id=6]
[ext_resource path="res://assets/explosion_1.tres" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 8, 11, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7.76963, 4.17742 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="Area2D" groups=[
"enemies",
]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
textures = [ ExtResource( 4 ), ExtResource( 3 ) ]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.5, 0 )
texture = SubResource( 1 )

[node name="BulletSpawner" type="Position2D" parent="."]
position = Vector2( 0, 8.15314 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="EnemyExplosion" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Enemy_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="animation_finished" from="EnemyExplosion" to="." method="_on_EnemyExplosion_animation_finished"]
